src/objects/CaseSolutionId__c.object
<CustomObject>
    <description>Its Junction Class Use for making relation between Case and Solution</description>
    <fields>
        <fullName>Case_Id__c</fullName>
        <description>Its Case ID generated By Self.</description>
        <displayFormat>A-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Case Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case to CaseSolotionId</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CaseSolutionId</relationshipLabel>
        <relationshipName>CaseSolutionId</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SolutionId__c</fullName>
        <description>Solution ID Pick from Solution Table.</description>
        <displayFormat>S-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>SolutionId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Solution_table__c</fullName>
        <description>Its connect to MD through Solution table.</description>
        <label>Solution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>CaseSolutionId</relationshipLabel>
        <relationshipName>CaseSolutionId</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>CaseSolutionId</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CaseSolutionId Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CaseSolutionId</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>